syntax = "proto3";

package customer.v1;

import "google/protobuf/timestamp.proto";

option go_package = "customer/proto/v1";

message Customer {
  string id = 1;
  string type = 2;
  string status = 3;
  string login = 4;
  string password = 5;
  string identity = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
  bool deleted = 9;
}

service CustomerService {
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc GetCustomer (ListCustomersRequest) returns (ListCustomersResponse);
  rpc ListCustomers (ListCustomersRequest) returns (ListCustomersResponse);
  rpc UpdateCustomer (UpdateCustomerRequest) returns (ListCustomersResponse);
  rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse);

  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message CreateCustomerRequest {
  Customer customer = 1;
  string confirmPassword = 2;
  //  map<string, string> optional = 6;
}

message CreateCustomerResponse {
  Customer customer = 1;
}

message ListCustomersRequest {
  string customer_id = 1;
}

message ListCustomersResponse {
  repeated Customer customers = 1;
}
message UpdateCustomerRequest {
  Customer customer = 1;
}

message DeleteCustomerRequest {
  string customer_id = 1;
}

message DeleteCustomerResponse {}


message LoginRequest {
  string ident = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string token = 1;
}
